Add back to top button

--- a/bosnia/index.html
+++ b/bosnia/index.html
@@ -203,13 +203,20 @@
             </section>
         </div>
     </div>
+    
+    <!-- Back to Top -->
+    <button id="top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
 
     <!-- Footer -->
     <footer>Copyright &copy; Visit the Balkans 2023</footer>
-
 </body>
 
 <!-- Sidebar Navigation Script -->
 <script src="../assets/js/script.js"></script>
+
+<!-- FontAwesome Script -->
+<script src="https://kit.fontawesome.com/99cb87f4e5.js" crossorigin="anonymous"></script>
 
 </html>
