Fix hyperlink error in homepage menu button

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 </body>
 
 <!-- Sidebar Navigation Script -->
-<script src="../assets/js/script.js"></script>
+<script src="assets/js/script.js"></script>
 
 <!-- FontAwesome Script -->
 <script src="https://kit.fontawesome.com/99cb87f4e5.js" crossorigin="anonymous"></script>
