Change active navigation links

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Side Navigation -->
     <menu id="nav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <li><a href="index.html"><img src="assets/images/map-balkans.png">Home</a></li>
+        <li><a href="#"><img src="assets/images/map-balkans.png">Home</a></li>
         <li><a href="croatia/"><img src="assets/images/ico-croatia.png">Croatia</a></li>
         <li><a href="bosnia/"><img src="assets/images/ico-bosnia.png">Bosnia &amp;
                 Herzegovina</a></li>
