--- a/serbia/index.html
+++ b/serbia/index.html
@@ -24,7 +24,7 @@
         <li><a href="../croatia/"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
         <li><a href="../bosnia/"><img src="../assets/images/ico-bosnia.png">Bosnia &amp;
                 Herzegovina</a></li>
-        <li><a href="index.html"><img src="../assets/images/ico-serbia.png">Serbia</a></li>
+        <li><a href="#"><img src="../assets/images/ico-serbia.png">Serbia</a></li>
         <li><a href="../montenegro/"><img src="../assets/images/ico-montenegro.png">Montenegro</a></li>
         <li><a href="../macedonia/"><img src="../assets/images/ico-macedonia.png">North Macedonia</a></li>
     </menu>
