--- a/bosnia/index.html
+++ b/bosnia/index.html
@@ -18,7 +18,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <li><a href="../"><img src="../assets/images/map-balkans.png">Home</a></li>
         <li><a href="../croatia/"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
-        <li><a href="index.html"><img src="../assets/images/ico-bosnia.png">Bosnia &amp;
+        <li><a href="#"><img src="../assets/images/ico-bosnia.png">Bosnia &amp;
                 Herzegovina</a></li>
         <li><a href="../serbia/"><img src="../assets/images/ico-serbia.png">Serbia</a></li>
         <li><a href="../montenegro/"><img src="../assets/images/ico-montenegro.png">Montenegro</a></li>
