--- a/croatia/index.html
+++ b/croatia/index.html
@@ -21,7 +21,7 @@
     <menu id="nav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <li><a href="../"><img src="../assets/images/map-balkans.png">Home</a></li>
-        <li><a href="index.html"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
+        <li><a href="#"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
         <li><a href="../bosnia/"><img src="../assets/images/ico-bosnia.png">Bosnia &amp;
                 Herzegovina</a></li>
         <li><a href="../serbia/"><img src="../assets/images/ico-serbia.png">Serbia</a></li>
