--- a/macedonia/index.html
+++ b/macedonia/index.html
@@ -26,7 +26,7 @@
                 Herzegovina</a></li>
         <li><a href="../serbia/"><img src="../assets/images/ico-serbia.png">Serbia</a></li>
         <li><a href="../montenegro/"><img src="../assets/images/ico-montenegro.png">Montenegro</a></li>
-        <li><a href="index.html"><img src="../assets/images/ico-macedonia.png">North Macedonia</a></li>
+        <li><a href="#"><img src="../assets/images/ico-macedonia.png">North Macedonia</a></li>
     </menu>
 
     <!-- Background Image -->
