--- a/montenegro/index.html
+++ b/montenegro/index.html
@@ -25,7 +25,7 @@
         <li><a href="../bosnia/"><img src="../assets/images/ico-bosnia.png">Bosnia &amp;
                 Herzegovina</a></li>
         <li><a href="../serbia/"><img src="../assets/images/ico-serbia.png">Serbia</a></li>
-        <li><a href="index.html"><img src="../assets/images/ico-montenegro.png">Montenegro</a></li>
+        <li><a href="#"><img src="../assets/images/ico-montenegro.png">Montenegro</a></li>
         <li><a href="../macedonia/"><img src="../assets/images/ico-macedonia.png">North Macedonia</a></li>
     </menu>
 
