--- a/serbia/index.html
+++ b/serbia/index.html
@@ -217,7 +217,7 @@
     <footer>Copyright &copy; Visit the Balkans 2023</footer>
 </body>
 
-<!-- Sidebar Navigation Script -->
+<!-- Navigation Scripts -->
 <script src="../assets/js/script.js"></script>
 
 <!-- FontAwesome Script -->
