Add missing code comments

--- a/bosnia/index.html
+++ b/bosnia/index.html
@@ -2,6 +2,8 @@
 
 <!-- HTML Boilerplate -->
 <html lang="en">
+
+    <!-- Document Metadata -->
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +13,8 @@
         <title>Bosnia Travel Guide - Visit the Balkans</title>
         <link rel="icon" href="../assets/images/map-balkans.png">
     </head>
+
+<!-- Document Body -->
 <body>
 
     <!-- Side Navigation -->
