--- a/bosnia/index.html
+++ b/bosnia/index.html
@@ -19,7 +19,7 @@
 
     <!-- Side Navigation -->
     <menu id="nav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fas fa-xmark"></i></a>
         <li><a href="../"><img src="../assets/images/map-balkans.png">Home</a></li>
         <li><a href="../croatia/"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
         <li><a href="#"><img src="../assets/images/ico-bosnia.png">Bosnia &amp;
@@ -56,7 +56,9 @@
                     </p>
                 </article>
             </section>
+
         </div>
+
     </div>
 
     <!-- Main Section -->
@@ -67,6 +69,7 @@
 
             <!-- Inner Wrapper -->
             <div class="inner">
+
                 <h2>Popular Destinations</h2>
                 <section class="row">
                     <figure>
@@ -79,6 +82,7 @@
                         </p>
                     </div>
                 </section>
+
                 <section class="row">
                     <figure>
                         <img src="images/hero-bosnia.jpg">
@@ -90,6 +94,7 @@
                         </p>
                     </div>
                 </section>
+
                 <section class="row">
                     <figure>
                         <img src="images/bosnia-blagaj.jpg">
@@ -100,7 +105,9 @@
                             This hidden gem is home to the serene Blagaj Tekke, a 16th-century Dervish monastery situated at the base of a cliff beside the Buna River. It's a place of tranquility and natural beauty, offering a glimpse into Bosnia's spiritual and historical heritage.
                         </p>
                 </section>
+
             </div>
+
         </article>
 
         <!-- Cultural Highlights Contents -->
@@ -108,7 +115,9 @@
 
             <!-- Inner Wrapper -->
             <div class="inner">
+
                 <h2>Cultural Highlights</h2>
+
                 <section class="row">
                     <figure>
                         <img src="images/bosnia-multicultural.jpg">
@@ -120,6 +129,7 @@
                         </p>
                     </div>
                 </section>
+
                 <section class="row">
                     <figure>
                         <img src="images/bosnia-coffee.jpg">
@@ -131,6 +141,7 @@
                         </p>
                     </div>
                 </section>
+
                 <section class="row">
                     <figure>
                         <img src="images/bosnia-treasures.jpg">
@@ -142,7 +153,9 @@
                         </p>
                     </div>
                 </section>
+
             </div>
+
         </article>
 
         <!-- Travel Tips Contents -->
@@ -150,7 +163,9 @@
 
             <!-- Inner Wrapper -->
             <div class="inner">
+
                 <h2>Travel Tips</h2>
+
                 <section class="row">
                     <figure>
                         <img src="images/bosnia-customs.jpg">
@@ -162,6 +177,7 @@
                         </p>
                     </div>
                 </section>
+
                 <section class="row">
                     <figure>
                         <img src="images/bosnia-cuisine.jpg">
@@ -173,6 +189,7 @@
                         </p>
                     </div>
                 </section>
+                
                 <section class="row">
                     <figure>
                         <img src="images/bosnia-prayer.jpg">
@@ -183,8 +200,11 @@
                             Bosnia has a significant Muslim population, and the call to prayer (Adhan) is an integral part of daily life. It's important to be mindful of prayer times, especially during Ramadan. Be considerate of those observing their religious duties, and avoid disrupting prayer sessions or gatherings in mosques.
                         </p>
                 </section>
+
             </div>
+
         </article>
+
     </main>
 
      <!-- Background Image -->
@@ -205,7 +225,9 @@
                 </div>
                 <a class="button" href="#">Download Brochure</a>
             </section>
+
         </div>
+
     </div>
     
     <!-- Back to Top -->
@@ -215,6 +237,7 @@
 
     <!-- Footer -->
     <footer>Copyright &copy; Visit the Balkans 2023</footer>
+
 </body>
 
 <!-- Navigation Scripts -->
