--- a/macedonia/index.html
+++ b/macedonia/index.html
@@ -19,7 +19,7 @@
 
     <!-- Side Navigation -->
     <menu id="nav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fas fa-xmark"></i></a>
         <li><a href="../"><img src="../assets/images/map-balkans.png">Home</a></li>
         <li><a href="../croatia/"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
         <li><a href="../bosnia/"><img src="../assets/images/ico-bosnia.png">Bosnia &amp;
@@ -56,7 +56,9 @@
                     </p>
                 </article>
             </section>
+
         </div>
+
     </div>
 
     <!-- Main Section -->
@@ -67,7 +69,9 @@
 
             <!-- Inner Wrapper -->
             <div class="inner">
+
                 <h2>Popular Destinations</h2>
+
                 <section class="row">
                     <figure>
                         <img src="images/macedonia-skopje.jpg">
@@ -79,6 +83,7 @@
                         </p>
                     </div>
                 </section>
+
                 <section class="row">
                     <figure>
                         <img src="images/macedonia-ohrid.jpg">
@@ -90,6 +95,7 @@
                         </p>
                     </div>
                 </section>
+
                 <section class="row">
                     <figure>
                         <img src="images/macedonia-bitola.jpg">
@@ -100,7 +106,9 @@
                             Known as the "City of Consuls," Bitola is famous for its charming Ottoman-era architecture and historic sites. Stroll along Sirok Sokak, visit the Heraclea Lyncestis archaeological site, and explore the old bazaars for a taste of local culture.
                         </p>
                 </section>
+
             </div>
+
         </article>
 
         <!-- Cultural Highlights Contents -->
@@ -108,7 +116,9 @@
 
             <!-- Inner Wrapper -->
             <div class="inner">
+
                 <h2>Cultural Highlights</h2>
+
                 <section class="row">
                     <figure>
                         <img src="images/macedonia-festivals.jpg">
@@ -120,6 +130,7 @@
                         </p>
                     </div>
                 </section>
+
                 <section class="row">
                     <figure>
                         <img src="images/macedonia-carsija.jpg">
@@ -131,6 +142,7 @@
                         </p>
                     </div>
                 </section>
+
                 <section class="row">
                     <figure>
                         <img src="images/macedonia-handicraft.jpg">
@@ -142,7 +154,9 @@
                         </p>
                     </div>
                 </section>
+
             </div>
+
         </article>
 
         <!-- Travel Tips Contents -->
@@ -150,7 +164,9 @@
 
             <!-- Inner Wrapper -->
             <div class="inner">
+
                 <h2>Travel Tips</h2>
+
                 <section class="row">
                     <figure>
                         <img src="images/macedonia-outdoor.jpg">
@@ -162,6 +178,7 @@
                         </p>
                     </div>
                 </section>
+
                 <section class="row">
                     <figure>
                         <img src="images/macedonia-festivals2.jpg">
@@ -173,6 +190,7 @@
                         </p>
                     </div>
                 </section>
+
                 <section class="row">
                     <figure>
                         <img src="images/macedonia-cuisine.jpg">
@@ -183,8 +201,11 @@
                             Don't miss the opportunity to savour traditional Macedonian dishes. Try local specialties like "Tavče Gravče" (bean casserole), "Ajvar" (pepper-based condiment), and "Kebapčinja" (grilled sausages). Pair your meals with local wines and rakija (fruit brandy) for a complete culinary experience.
                         </p>
                 </section>
+
             </div>
+
         </article>
+
     </main>
 
     <!-- Background Image -->
@@ -205,7 +226,9 @@
                 </div>
                 <a class="button" href="#">Download Brochure</a>
             </section>
+
         </div>
+
     </div>
     
     <!-- Back to Top -->
@@ -215,6 +238,7 @@
 
     <!-- Footer -->
     <footer>Copyright &copy; Visit the Balkans 2023</footer>
+    
 </body>
 
 <!-- Navigation Scripts -->
