--- a/montenegro/index.html
+++ b/montenegro/index.html
@@ -19,7 +19,7 @@
 
     <!-- Side Navigation -->
     <menu id="nav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fas fa-xmark"></i></a>
         <li><a href="../"><img src="../assets/images/map-balkans.png">Home</a></li>
         <li><a href="../croatia/"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
         <li><a href="../bosnia/"><img src="../assets/images/ico-bosnia.png">Bosnia &amp;
@@ -56,7 +56,9 @@
                     </p>
                 </article>
             </section>
+
         </div>
+
     </div>
 
     <!-- Main Section -->
@@ -67,7 +69,9 @@
 
             <!-- Inner Wrapper -->
             <div class="inner">
+
                 <h2>Popular Destinations</h2>
+
                 <section class="row">
                     <figure>
                         <img src="images/hero-montenegro.jpg">
@@ -79,6 +83,7 @@
                         </p>
                     </div>
                 </section>
+
                 <section class="row">
                     <figure>
                         <img src="images/montenegro-cetinje.jpg">
@@ -90,6 +95,7 @@
                         </p>
                     </div>
                 </section>
+
                 <section class="row">
                     <figure>
                         <img src="images/montenegro-podgorica.jpg">
@@ -100,7 +106,9 @@
                             As the capital city, Podgorica is Montenegro's political and administrative hub. Visitors can explore its historic sites, such as the Clock Tower and the Millennium Bridge. The city also offers parks and cultural institutions, providing insights into Montenegrin life.
                         </p>
                 </section>
+
             </div>
+
         </article>
 
         <!-- Cultural Highlights Contents -->
@@ -108,7 +116,9 @@
 
             <!-- Inner Wrapper -->
             <div class="inner">
+
                 <h2>Cultural Highlights</h2>
+
                 <section class="row">
                     <figure>
                         <img src="images/montenegro-venetian.jpg">
@@ -120,6 +130,7 @@
                         </p>
                     </div>
                 </section>
+
                 <section class="row">
                     <figure>
                         <img src="images/montenegro-festivals.jpg">
@@ -131,6 +142,7 @@
                         </p>
                     </div>
                 </section>
+
                 <section class="row">
                     <figure>
                         <img src="images/montenegro-traditions.jpg">
@@ -142,7 +154,9 @@
                         </p>
                     </div>
                 </section>
+
             </div>
+
         </article>
 
         <!-- Travel Tips Contents -->
@@ -150,7 +164,9 @@
 
             <!-- Inner Wrapper -->
             <div class="inner">
+
                 <h2>Travel Tips</h2>
+
                 <section class="row">
                     <figure>
                         <img src="images/montenegro-travel.jpg">
@@ -162,6 +178,7 @@
                         </p>
                     </div>
                 </section>
+
                 <section class="row">
                     <figure>
                         <img src="images/montenegro-explore.jpg">
@@ -173,6 +190,7 @@
                         </p>
                     </div>
                 </section>
+
                 <section class="row">
                     <figure>
                         <img src="images/montenegro-cuisine.jpg">
@@ -183,8 +201,11 @@
                             Montenegrin cuisine is a delightful blend of Mediterranean and Balkan flavours. Local dishes often feature fresh seafood, olive oil, and an array of vegetables. Sampling traditional dishes like "njeguški pršut" (smoked ham) and "kastradina" (dried mutton) is a delicious way to explore the country's culinary heritage.
                         </p>
                 </section>
+
             </div>
+
         </article>
+
     </main>
 
     <!-- Background Image -->
@@ -205,7 +226,9 @@
                 </div>
                 <a class="button" href="#">Download Brochure</a>
             </section>
+
         </div>
+
     </div>
     
     <!-- Back to Top -->
@@ -215,6 +238,7 @@
 
     <!-- Footer -->
     <footer>Copyright &copy; Visit the Balkans 2023</footer>
+    
 </body>
 
 <!-- Navigation Scripts -->
